# cpcc_task_automation

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DEPENDENCY_CLEANUP.md  FIX_RUBRIC_SCORING_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTES.md  MIGRATION_SUMMARY.md  OPENAI_TOKEN_PARAMS_PR_SUMMARY.md  OPENROUTER_ALLOWED_MODELS_SUMMARY.md  OPENROUTER_INTEGRATION.md  PRODUCT.md  PR_FINAL_SUMMARY.txt  PR_SUMMARY.md  README.md  SCORING_ENGINE_SUMMARY.md  SECURITY_SUMMARY.md  STREAMLIT_DUPLICATE_KEY_FIX_SUMMARY.md  TESTING.md  codecov.yml  coverage-e2e.xml  coverage-integration.xml  coverage-unit.xml  cron.py  docker-compose.yml  packages.txt  pyproject.toml  railway.json  requirements.txt  run.sh  streamlit_app.py  validate_fixes.py  verify_openrouter_integration.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: documentation.agent.md  implementation.agent.md  testing.agent.md
.github/instructions/: ai-llm.instructions.md  ci-failure-handling.instructions.md  core-logic.instructions.md  openai.instructions.md  streamlit.instructions.md  tests.instructions.md
.github/workflows/: Cron_Action.yml  Selenium_Action.yml  codeql-analysis.yml  codeql.yml  dependabot-auto-merge.yml  dependabot-ci-autofix.yml  e2e-coverage.yml  gitguardian-scan.yml  integration-coverage.yml  integration-e2e-coverage.yml  unit-tests.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CI_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  COVERAGE_AND_E2E_FOLLOWUP.md  CSC151_V2_IMPLEMENTATION.md  DEBUGGING_ENHANCEMENTS.md  DOCKER_CHROME_BEFORE_AFTER.md  GRADE_ASSIGNMENT_FIXES.md  IMPLEMENTATION_SUMMARY_ZIP_BATCH_GRADING.md  OPENROUTER_IMPLEMENTATION_SUMMARY.md  OPENROUTER_UI_GUIDE.md  PROMPT_REFACTOR_SUMMARY.md  PR_SUMMARY_FILE_UPLOAD.md  README.md  REORGANIZATION_2026-01-09.md  ai-llm.md  ci-branch-protection.md  codecov_enforcement.md  dead_code_cleanup_report.md  docker-selenium-troubleshooting.md  file-upload-from-urls.md  file-upload-quick-reference.md  file-upload-ui-demo.md  grading_flow_diagram.md  grading_state_management.md  langchain-vs-openai-assessment.md  openai-client-wrapper.md  openai-debug-mode.md  openai-structured-outputs-guide.md  pdf_extraction.md  per_student_feedback_feature.md  plan-template.md  regression_check_pr_student_feedback.md  rubrics.md  security-workflows.md  src-cqc-cpcc.md  src-cqc-streamlit-app.md  student-feedback-word-export.md  testing.md  unit_test_performance_summary.md  (+2 more)
docs/migrations/: DEPENDENCY_CLEANUP.md  DUPLICATE_KEY_FIX_TESTING.md  README.md
docs/notes/: PR_NOTES.md  README.md
docs/pr-summaries/: CI_WORKFLOW_PR_SUMMARY.md  COPILOT_OPTIMIZATION_SUMMARY.md  GPT5_TEMPERATURE_FIX_PR_SUMMARY.md  README.md  REQUIRED_ARRAY_FIX_PR_SUMMARY.md  SCHEMA_NORMALIZATION_PR_SUMMARY.md  STREAMLIT_DUPLICATE_KEY_FIX_SUMMARY.md  STREAMLIT_RUBRIC_UI_PR_SUMMARY.md
scripts/: README_RUN_RUBRIC_INTEGRATION.md  java_code_auto_run.sh  java_code_auto_run_old.sh  kill_selenium_drivers.sh  run_integration_rubric_test.sh  run_tests.sh  start_selenium_chrome_docker.sh  test_openai_debug.py  test_openrouter_lite.py  test_pdf_extraction.py  verify_schema_fix.py
src/cqc_cpcc/: attendance.py  attendance_screenshot.py  brightspace.py  course_identifier.py  error_definitions_config.py  error_definitions_models.py  error_scoring.py  exam_review.py  feedback_doc_generator.py  find_student.py  grading_run_key.py  main.py  my_colleges.py  project_feedback.py  rubric_config.py  rubric_grading.py  rubric_models.py  rubric_overrides.py  screenshot_listener.py  student_feedback_builder.py
src/cqc_cpcc/config/: error_definitions_registry.json  rubric_error_definitions.json  rubrics.json  rubrics_v1_legacy.json
src/cqc_cpcc/scoring/: __init__.py  rubric_scoring_engine.py
src/cqc_cpcc/test/: attendance_records_example.py  exam_review_test.py  feedback_test.py  function_tests.py  test.py
src/cqc_cpcc/utilities/: brightspace_helper.py  cpcc_utils.py  date.py  env_constants.py  (+8 more)
src/cqc_streamlit_app/: Home.py  README.md  chatgpt_status_callback_handler.py  initi_pages.py  pexels_helper.py  streamlit_logger.py  utils.py
streamlit-app/: home.py
streamlit-app/pages/: 1-take-attendance.py  2_Give_Feedback.py  6-settings.py
streamlit_app/: Home.py  utils.py
streamlit_app/pages/: 1_Take_Attendance.py  2_Give_Feedback.py  3_Grade_Exams.py  6_Settings.py
tests/: STRUCTURED_OUTPUTS_README.md  conftest.py  demo_exam_grading_migration.py  openai_test_helpers.py  test_openai_structured_outputs.py
tests/e2e/: conftest.py  test_smoke.py
tests/integration/: README_OPENAI_INTEGRATION.md  conftest.py  test_error_definitions_integration.py  test_openai_structured_output_integration.py  test_openrouter_structured_output_integration.py  test_rubric_grading_integration.py  test_rubric_grading_live_integration.py  test_rubric_integration.py  test_rubric_zip_batch_grading.py
tests/unit/: test_ai_reflection_rubric.py  test_async_wrapper.py  test_attendance.py  test_attendance_screenshot.py  test_backend_scoring.py  test_brightspace.py  test_brightspace_zip_format.py  test_cached_grading_display.py  test_course_identifier.py  test_csc151_scoring_fix.py  test_csc151_v2_integration.py  test_date.py  test_date_utilities.py  test_env_constants.py  test_error_definitions_config.py  test_error_definitions_models.py  test_error_scoring.py  test_exam_grading_openai.py  test_exam_review_coverage.py  test_feedback_doc_generator.py  test_feedback_zip_packaging.py  test_find_student.py  test_gpt5_temperature_sanitization.py  test_grading_edge_cases.py  test_grading_guard_logic.py  test_grading_run_key.py  test_logger.py  test_main.py  test_my_colleges.py  test_my_pydantic_parser.py  test_openai_client.py  test_openai_client_coverage.py  test_openai_client_debug.py  test_openai_client_empty_response_retry.py  test_openai_client_smart_retry.py  test_openai_debug.py  test_openai_fallback_normalization.py  test_openai_schema_integration.py  test_openai_token_params.py  test_openrouter_plugins.py  (+20 more)
(+23 files in other folders)
