[tool.poetry]
name = "cpcc-task-automation"
version = "0.1.2"
description = ""
authors = ["gitchrisqueen <christopher.queen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cqc_cpcc", from = "src" },
    { include = "cqc_streamlit_app", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
os-env = "^0"
selenium = "^4"
webdriver-manager = "^4"
typing-extensions = "^4"
bs4 = "^0"
pandas = "^2"
datetime = "^6"
dateparser = "^1"
langchain-core = "^1"
langchain-community = "^0"
langchain-openai = "^1"
openai = "^2"
httpx = "^0.28"
ordered-set = "^4"
chromadb = "^1"
protobuf = "^6"
python-docx = "^1"
#simplify_docx= { git = "https://github.com/gitchrisqueen/Simplify-Docx.git"}
chromedriver-autoinstaller = "^0"
pyvirtualdisplay = "^3"
streamlit = "^1"
textract = "^1"
mammoth = "^1"
markdownify = "^1"
streamlit-ext = "^0"
streamlit-elements = "^0"
watchdog = "^6"
pexels-api = "^1"
chromium = "^0"
extra-streamlit-components = "^0"
six = "^1"
openpyxl = "^3"
tabulate = "^0"
pypdf = "^6"
pymupdf = "^1"



[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1"
setuptools = "^80"
grandalf = "^0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
# Any dependencies that do not meet that criteria will be removed.
pytest = "^9"
pytest-cov = "^7"
freezegun = "^1"
pytest-mock = "^3"
syrupy = "^5"
pytest-watcher = "^0"
pytest-asyncio = "^1"
grandalf = "^0"
pytest-profiling = "^1"
pytest-timeout = "^2"


[tool.poetry.group.test_integration]
optional = true
dependencies = { }


[tool.poetry.group.e2e]
optional = true

[tool.poetry.group.e2e.dependencies]
playwright = "^1.58.0"
pytest-playwright = "^0.7.2"

[tool.coverage.run]
omit = [
    "tests/*",
    "src/cqc_cpcc/utilities/AI/llm_deprecated/*",  # Deprecated LangChain code
    "src/cqc_streamlit_app/pages/*", # Streamlit app pages (not needed for unit test. Covered in e2e tests)
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "T201", # print
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "e2e: mark a test as an end-to-end test",
]
asyncio_mode = "auto"
# Filter third-party deprecation warnings that are outside our control
filterwarnings = [
    # Protobuf 3.x uses deprecated datetime.utcfromtimestamp() in well_known_types.py
    # This is a known issue in the protobuf library and will be fixed when we can safely upgrade to protobuf 4+
    "ignore:datetime.datetime.utcfromtimestamp.*:DeprecationWarning:google.protobuf.internal.well_known_types",
]
